--- a/sales.html
+++ b/sales.html
@@ -6,10 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="sales.css">
+
 </head>
 
 <body>
-    
+  
+    <ul class="a" class="output">
+        <h2>Seattle</h2>
+        <li></li>
+    </ul>
+    <ul class="b" class="output">
+        <h2>Tokyo</h2>
+        <li></li>
+    </ul>
+    <ul class="c" class="output">
+        <h2>Dubai</h2>
+        <li></li>
+    </ul>
+    <ul class="d" class="output">
+        <h2>Paris</h2>
+        <li></li>
+    </ul>
+    <ul class="e" class="output">
+        <h2>Lima</h2>
+        <li></li>
+    </ul>
     <script src="app.js"></script>
 </body>
 
