--- a/sales.html
+++ b/sales.html
@@ -12,26 +12,61 @@
 
 <body>
   
-    <ul class="a" class="output">
-        <h2>Seattle</h2>
-        <li></li>
-    </ul>
-    <ul class="b" class="output">
-        <h2>Tokyo</h2>
-        <li></li>
-    </ul>
-    <ul class="c" class="output">
-        <h2>Dubai</h2>
-        <li></li>
-    </ul>
-    <ul class="d" class="output">
-        <h2>Paris</h2>
-        <li></li>
-    </ul>
-    <ul class="e" class="output">
-        <h2>Lima</h2>
-        <li></li>
-    </ul>
+    <table id="jsTbl"></table>
+    
+    <table>
+        <tr>
+            <th></th>
+            <th>6am</th>
+            <th>7am</th>
+            <th>8am</th>
+            <th>9am</th>
+            <th>10am</th>
+            <th>11am</th>
+            <th>12pm</th>
+            <th>1pm</th>
+            <th>2pm</th>
+            <th>3pm</th>
+            <th>4pm</th>
+            <th>5pm</th>
+            <th>6pm</th>
+            <th>7pm</th>
+        </tr>
+        <tr>
+            <td>Seattle</td>
+            <td>20 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+        </tr>
+        <tr>
+            <td>Tokyo</td>
+            <td>20 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+            <td>30 cookies</td>
+        </tr>
+    </table>
     <script src="app.js"></script>
 </body>
 
