--- a/sales.html
+++ b/sales.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
+    <a href="index.html">HomePage</a>
   
-    <table id="jsTbl"></table>
     
-    <table>
-        <tr>
+    <table id="jsTbl">
+        
+        <!-- <tr>
             <th></th>
             <th>6am</th>
             <th>7am</th>
@@ -31,41 +32,8 @@
             <th>5pm</th>
             <th>6pm</th>
             <th>7pm</th>
-        </tr>
-        <tr>
-            <td>Seattle</td>
-            <td>20 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-        </tr>
-        <tr>
-            <td>Tokyo</td>
-            <td>20 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-            <td>30 cookies</td>
-        </tr>
+        </tr> -->
+
     </table>
     <script src="app.js"></script>
 </body>
