--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <div id="content">
-     <p>Salmon Cookies is an amazing business that has captured the attention of customers in Seattle, Tokyo, Dubai, Paris, and Lima with its innovative product - salmon-shaped cookies. The entrepreneur behind this business has shown a great deal of creativity and attention to detail in designing cookies that taste delicious. The popularity of Salmon Cookies in different parts of the world is a testament to the universal appeal of this unique product. It's impressive to see how the business has expanded to multiple cities and continues to grow, making its mark in the global market. The success of Salmon Cookies is a reflection of the hard work and dedication of the entrepreneur, and it's a great example of how a simple idea can turn into a successful business.</p>
+     <p>Salmon Cookies is an amazing business that has captured the attention of customers in Seattle, Tokyo, Dubai, Paris, and Lima with its innovative product - salmon-shaped cookies. The entrepreneur behind this business has shown a great deal of creativity and attention to detail in designing cookies that taste delicious. The popularity of Salmon Cookies in different parts of the world is a testament to the universal appeal of this unique product. It's impressive to see how the business has expanded to multiple cities and continues to grow, making its mark in the global market. The success of Salmon Cookies is a reflection of the hard work and dedication of the entrepreneur, and it is a great example of how a simple idea can turn into a successful business.</p>
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png">
     </div>
 </body>
