--- a/sales.html
+++ b/sales.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="firstD">
     <a href="index.html">HomePage</a>
   
     
@@ -35,6 +36,20 @@
         </tr> -->
 
     </table>
+    <form>
+        <fieldset>
+            <label for="Cookie-Locations">
+           <input id="Cookie-Locations" type="text" name="Cookie-Locations" placeholder="Cookie-Locations">
+           <input id="min" type="text" name="min" placeholder="min">
+           <input id="max" type="text" name="max" placeholder="max">
+           <input id="avg" type="text" name="avg" placeholder="avg">
+            </label>
+            <button type="submit" id="Cookie-Locations-Button" >Submit</button>
+            
+
+        </fieldset>
+    </form>
+    </div>
     <script src="app.js"></script>
 </body>
 
