--- a/sales.html
+++ b/sales.html
@@ -34,7 +34,7 @@
             <th>6pm</th>
             <th>7pm</th>
         </tr> -->
-
+        <tfoot id="TFoot"></tfoot>
     </table>
     <form>
         <fieldset>
